[tool.poetry]
name = "e10p"
version = "0.1.0"
description = ""
authors = ["takatoh <takatoh.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
e10p = "e10p.command:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
